bugfix : menuitem-z-index

--- a/IUEditor/Resource/iu.css
+++ b/IUEditor/Resource/iu.css
@@ -31,6 +31,7 @@ a{
 .IUItem{
     width: 100%;
     height: 100%;
+    z-index:10;
 }
 
 .IUCollection > div{
